# open-cm

./: Cargo.toml
.cargo/: config.toml
firmware/: Cargo.toml
firmware/src/: can.rs  lib.rs  main.rs  tecmp.rs
firmware/tests/: integration.rs
host_tools/send_can/src/: main.rs
open-cm-common/: Cargo.toml
open-cm-common/src/: can.rs  lib.rs  lin.rs  tecmp.rs
open-cm-fw/: Cargo.toml
open-cm-fw/src/: can.rs  lib.rs  lin.rs  main.rs  tecmp.rs
open-cm-fw/tests/: integration.rs
open-cm-host-lib/: Cargo.toml
open-cm-host-lib/examples/: configure.rs  lin.rs  send_can.rs
open-cm-host-lib/src/: lib.rs
open-cm-tools/send_can/: Cargo.toml
open-cm-tools/send_can/src/: main.rs
src/: can.rs  lib.rs  main.rs  tecmp.rs
