[package]
name = "open-cm-common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
defmt = { version = "1.0.1", optional = true }
smoltcp = { version = "0.12.0", default-features = false, features = ["medium-ethernet", "proto-ipv4", "socket-raw"] }
tecmp-rs = { path = "../../tecmp-rs" }

[features]
std = []
